@@ -285,6 +285,7 @@
                               <object class="GtkViewport" id="viewport1">
                                 <property name="visible">True</property>
                                 <property name="can_focus">False</property>
+                                <property name="shadow_type">none</property>
                                 <child>
                                   <object class="GtkGrid" id="p1-details">
                                     <property name="visible">True</property>
@@ -302,6 +303,7 @@
                                         <property name="use_markup">True</property>
                                         <property name="width_chars">20</property>
                                         <property name="xalign">0</property>
+                                        <property name="yalign">0</property>
                                       </object>
                                       <packing>
                                         <property name="left_attach">1</property>
@@ -317,9 +319,10 @@
                                         <property name="use_markup">True</property>
                                         <property name="width_chars">10</property>
                                         <property name="xalign">0</property>
+                                        <property name="yalign">0</property>
                                       </object>
                                       <packing>
-                                        <property name="left_attach">2</property>
+                                        <property name="left_attach">3</property>
                                         <property name="top_attach">0</property>
                                       </packing>
                                     </child>
@@ -332,9 +335,10 @@
                                         <property name="use_markup">True</property>
                                         <property name="width_chars">20</property>
                                         <property name="xalign">0</property>
+                                        <property name="yalign">0</property>
                                       </object>
                                       <packing>
-                                        <property name="left_attach">4</property>
+                                        <property name="left_attach">5</property>
                                         <property name="top_attach">0</property>
                                       </packing>
                                     </child>
@@ -347,9 +351,10 @@
                                         <property name="use_markup">True</property>
                                         <property name="width_chars">10</property>
                                         <property name="xalign">0</property>
+                                        <property name="yalign">0</property>
                                       </object>
                                       <packing>
-                                        <property name="left_attach">6</property>
+                                        <property name="left_attach">7</property>
                                         <property name="top_attach">0</property>
                                       </packing>
                                     </child>
@@ -362,9 +367,10 @@
                                         <property name="use_markup">True</property>
                                         <property name="width_chars">10</property>
                                         <property name="xalign">0</property>
+                                        <property name="yalign">0</property>
                                       </object>
                                       <packing>
-                                        <property name="left_attach">8</property>
+                                        <property name="left_attach">9</property>
                                         <property name="top_attach">0</property>
                                       </packing>
                                     </child>
@@ -374,9 +380,10 @@
                                         <property name="sensitive">False</property>
                                         <property name="can_focus">False</property>
                                         <property name="label" translatable="yes">Lock.</property>
+                                        <property name="yalign">0</property>
                                       </object>
                                       <packing>
-                                        <property name="left_attach">3</property>
+                                        <property name="left_attach">4</property>
                                         <property name="top_attach">0</property>
                                       </packing>
                                     </child>
@@ -386,9 +393,10 @@
                                         <property name="sensitive">False</property>
                                         <property name="can_focus">False</property>
                                         <property name="label" translatable="yes">Lock.</property>
+                                        <property name="yalign">0</property>
                                       </object>
                                       <packing>
-                                        <property name="left_attach">5</property>
+                                        <property name="left_attach">6</property>
                                         <property name="top_attach">0</property>
                                       </packing>
                                     </child>
@@ -398,9 +406,10 @@
                                         <property name="sensitive">False</property>
                                         <property name="can_focus">False</property>
                                         <property name="label" translatable="yes">Lock.</property>
+                                        <property name="yalign">0</property>
                                       </object>
                                       <packing>
-                                        <property name="left_attach">9</property>
+                                        <property name="left_attach">10</property>
                                         <property name="top_attach">0</property>
                                       </packing>
                                     </child>
@@ -410,9 +419,27 @@
                                         <property name="sensitive">False</property>
                                         <property name="can_focus">False</property>
                                         <property name="label" translatable="yes">Lock.</property>
+                                        <property name="yalign">0</property>
                                       </object>
                                       <packing>
-                                        <property name="left_attach">7</property>
+                                        <property name="left_attach">8</property>
+                                        <property name="top_attach">0</property>
+                                      </packing>
+                                    </child>
+                                    <child>
+                                      <object class="GtkLabel" id="label">
+                                        <property name="visible">True</property>
+                                        <property name="sensitive">False</property>
+                                        <property name="can_focus">False</property>
+                                        <property name="tooltip_text" translatable="yes">Whether this row's account is the target when selecting a mean of paiement.</property>
+                                        <property name="margin_right">2</property>
+                                        <property name="label" translatable="yes">Paiem.
+target</property>
+                                        <property name="justify">center</property>
+                                        <property name="yalign">0</property>
+                                      </object>
+                                      <packing>
+                                        <property name="left_attach">2</property>
                                         <property name="top_attach">0</property>
                                       </packing>
                                     </child>
